--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="userInfo_box_uploadImg_content_mian">
             <div class="userInfo_box_uploadImg_content_mian_left fl">
                 <div class="userInfo_box_uploadImg_content_mian_left_imgBox">
+                    <!-- 这是初始图片 -->
                     <img src="static/img/user_unSet_image.png" id="image">
                 </div>
-
                 <div class="userInfo_box_uploadImg_content_mian_left_btns_zooms">
                     <label id="userImg_zoomOut" class="fl curp">-</label>
                     <label id="userImg_zoomIn" class="fr curp">+</label>
