[modify]修改部分细节

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="userInfo_box_uploadImg_content_mian_left fl">
                 <div class="userInfo_box_uploadImg_content_mian_left_imgBox">
                     <!-- 这是初始图片 -->
-                    <img src="static/img/user_unSet_image.png" id="image">
+                    <img src="./static/img/user_unSet_image.png" id="image">
                 </div>
                 <div class="userInfo_box_uploadImg_content_mian_left_btns_zooms">
                     <label id="userImg_zoomOut" class="fl curp">-</label>
